user-charts/admin-s/templates/network/admin-ss-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ss
  labels:
    app: ss
spec:
  type: ClusterIP
  selector:
    app: ss
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
