user-charts/admin-s/templates/network/admin-ss-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ss
spec:
  parentRefs:
    - name: s-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "ss.192.168.100.242.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ss
          port: 80
